Text align fix

--- a/src/styles/pages/_contact.scss
+++ b/src/styles/pages/_contact.scss
@@ -18,6 +18,7 @@
       @include para-font;
       font-size: 0.9rem;
       max-width: 70%;
+      text-align: left;
    }
 
    .left {
